tests/ui/endpoint/non_custom_params_attribute.stderr
error: `params` can only be used on custom endpoints
 --> tests/ui/endpoint/non_custom_params_attribute.rs:8:12
  |
8 | #[read_all(params = true)]
  |            ^^^^^^
